# ml-learning

./: .gitignore  best_model.pth  pyproject.toml  run.py  serve_model.sh  test_invoke.sh
notebooks/: linear-regression.ml.ipynb  read_learned_parameters.ipynb
src/simple_linear_regression/: data_prep.py  evaluate.py  model.py  train.py
